# analyticaloan

./: .env.example  .gitignore  CONTRIBUTING.md  LOCAL_SETUP_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: API_Documentation.md  CODE_AUDIT_REPORT.md  Engineering_Roadmap.md  POJK_Compliance_Mapping.md  Production_Deployment_Guide.md  RSS_Requirements_Specification.md  Security_Hardening_Checklist.md  System_Architecture.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
infrastructure/k8s/production/: api-gateway.yaml
infrastructure/monitoring/prometheus/: prometheus.yml
libs/common/: __init__.py  audit.py  encryption.py  security_middleware.py  validators.py
libs/database/: models.py  session.py
libs/integrations/: __init__.py  external_apis.py
scripts/: seed_data.py
services/api-gateway/: .env.example  Dockerfile  README.md  requirements.txt
services/api-gateway/app/: main.py
services/auth-service/app/: auth.py  main.py
services/document-service/: README.md  requirements.txt
services/document-service/app/: main.py  ocr.py  qc.py  storage.py
services/document-service/app/parsers/: __init__.py  bank_statement.py  financial_statements.py
services/scoring-service/: requirements.txt
services/scoring-service/app/: credit_model.py  feature_engineering.py  main.py  xai_explainer.py
services/underwriting-service/: README.md  requirements.txt
services/underwriting-service/app/: agent.py  gemini_client.py  main.py  rag_engine.py  rule_engine.py  tool_calling.py
services/websocket-service/app/: main.py
